# api-orchestrator

./: .gitignore  Dockerfile  Dockerfile.local  HELP.md  LICENSE.md  docker-compose.debug.yml  pyproject.toml  setup.cfg
backend/: requirements_dev.txt
backend/app/configs/: load_definition copy.json  load_definition.json  settings.py
backend/app/src/: main.py
backend/app/src/api/auth/: models.py  routers.py  service.py
backend/app/src/api/health_check/: routers.py  services.py
backend/app/src/api/rabbitmq/: base.py  client.py  constants.py  deps.py  routers.py  schemas.py
backend/app/src/core/: logging.py
backend/app/src/core/exception_handlers/: app_exceptions.py  exception_model.py
backend/scripts/: after-build.sh  compile.py  run-main-compile.sh  run-main.sh  run-tests.sh
