[project]
name = "api-orchestrator"
version = "0.1.0"
description = ""
authors = [
    {name = "Aleksandr Teslenko",email = "alteslo31@gmail.com"}
]
readme = "README.md"
requires-python = "3.11.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "debugpy (>=1.8.14,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "aio-pika (>=9.5.5,<10.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "httpx (>=0.28.1,<0.29.0)"
]

[tool.poetry]
packages = [
    { include = "app", from = "backend" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
known_first_party = ["app"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY"]
line_length = 120
multi_line_output = 3